2016-04-09  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-474

	* methods.cc: Renamed WSM oem to OEM

	* m_oem: Renamed oem to OEM. Added conjugate gradient versions
	for each optimization method.

	* 3rdparte/invlib/* invlib update.

2016-04-07  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-475

	* CMakeLists.txt:

	Put OS X clang on C++11 blacklist for now. Apple Clang as well as
	vanilla clang (tested 3.6-3.8) currently fail compiling invlib on OS X
	10.11.4.

2016-04-06  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-474

	* 3rdparte/invlib/* invlib update.

	* m_oem.cc: Optimized invlib forward model interface to avoid
	unnecessary computation of the Jacobian.

2016-04-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-473

	* CMakeLists.txt, src/CMakeLists.txt:

	Move all CXX11 detection into one place in toplevel CMakeLists.txt. Set
	C++11 compiler flags globally (if enabled). Set maximum template depth globally
	to 1024.

	Add Intel compiler <16.1(unreleased) to C++11 blacklist.
	In version 16.0, it does not yet support all necessary C++11 features.

	* config.h.cmake: Add CXX11_SUPPORT preprocessor definition.

	* src/main.cc, src/m_oem.cc: Use CXX11_SUPPORT preproc constant.

	* 3rdparty/Eigen/Core:

	Temporarily disable deprecated warnings in Functors.h file for
	binder1st and binder2nd when compiling with C++11 support until Eigen
	library is fixed.
	
2016-04-05  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-472

	* src/CMakeLists.txt Added macro to signal C++11 support.

	* m_oem.cc Fixed conditional compilation to also work in absence of
	C++11 support.

2016-04-05  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-471

	Small fix to Oliver's changes to make C++11 autodetection work.

	* src/m_oem.cc: Removed conditional compilation macros around x2arts method.

	* src/m_oem.cc: Forwarded display_progress argument to invlib call.

2016-04-05  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-470
