@@ -98,7 +98,7 @@ struct OptimizerLog<LevenbergMarquardt<RealType, DampingMatrix, Solver>>
     static std::string header()
     {
         std::string lambda = "\u03BB";
-        std::string out(15 - lambda.size(), ' ');
+        std::string out((15 - lambda.size()) / 2, ' ');
         out += lambda;
         return out;
     }
@@ -175,6 +175,7 @@ void StandardLog<LogType::MAP>::init(Params... params)
             std::cout << std::endl;
             std::cout << std::setw(5) << "Step" << std::setw(15) << "Total Cost";
             std::cout << std::setw(15) << "x-cost" << std::setw(15) << "y-cost";
+            std::cout << std::setw(15) << "conv. crit.";
             std::cout << OptimizerLog<OptimizationType>::header();
             std::cout << std::endl << separator() << std::endl;
         }
@@ -190,13 +191,14 @@ void StandardLog<LogType::MAP>::step(Params... params)
     {
         auto tuple = std::make_tuple(params...);
         using OptimizationType =
-            typename std::tuple_element<4, decltype(tuple)>::type;
+            typename std::tuple_element<5, decltype(tuple)>::type;
 
         std::cout<< std::setw(5) << std::get<0>(tuple);
         std::cout<< std::setw(15) << std::get<1>(tuple);
         std::cout<< std::setw(15) << std::get<2>(tuple);
         std::cout<< std::setw(15) << std::get<3>(tuple);
-        std::cout<< OptimizerLog<OptimizationType>::log(std::get<4>(tuple));
+        std::cout<< std::setw(15) << std::get<4>(tuple);
+        std::cout<< OptimizerLog<OptimizationType>::log(std::get<5>(tuple));
         std::cout << std::endl;
     }
 }
